# GenieFlatAna

./: CMakeLists.txt  README.md  run_GenieHadAna.C  setup.sh
Analyzers/: AnalyzerCore.C  AnalyzerCore.h  CMakeLists.txt  GenieFlatTree.C  GenieFlatTree.h  GenieHadAna.C  GenieHadAna.h
DataFormats/: CMakeLists.txt  Event.C  Event.h  Particle.C  Particle.h
python/: PrintToDoLists.py
